# tes-digital_twin_2.0

./: .gitignore  README.md  context.txt  materials.json  pyproject.toml
configs/geometry/: 4_blocks_naked.json  baseline_block.json  baseline_block_2L.json  pilot_scheme.json
configs/scenarios/: 4_blocks_naked.yml  baseline_1L.yml  baseline_2L.yml  baseline_single_layer.yml  pilot_scheme.yml
data/: 1L_400C.xlsx  1L_600C.xlsx  1L_700C.xlsx  2L_600C.xlsx  2L_700C.xlsx  DATA_TES_Temperature_response_FRC.xlsx
documents/: materials_references.md
publication/: abstract_intro.md  methodology.aux  methodology.md  methodology.out  methodology.tex
report/: report.tex
scripts/: color_preview.py
src/thermal_twin/: __init__.py  cli.py
src/thermal_twin/analysis/: __init__.py  data_compare.py  plot_telemetry.py
src/thermal_twin/geometry/: __init__.py  elements.py
src/thermal_twin/materials/: __init__.py  library.py
src/thermal_twin/meshing/: __init__.py  builder.py
src/thermal_twin/scenarios/: __init__.py  runner.py  schema.py
src/thermal_twin/solver/: __init__.py  core.py
src/thermal_twin/ui/: app.py
